Adds commit timeline webview (wip)

--- a/src/webviews/apps/settings/index.html
+++ b/src/webviews/apps/settings/index.html
@@ -3309,8 +3309,6 @@
             </div>
         </div>
 
-        <script type="text/javascript">
-            window.bootstrap = '{{bootstrap}}';
-        </script>
+        {{ endOfBody }}
     </body>
 </html>
