--- a/src/webviews/apps/welcome/index.html
+++ b/src/webviews/apps/welcome/index.html
@@ -449,8 +449,6 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            window.bootstrap = '{{bootstrap}}';
-        </script>
+        {{ endOfBody }}
     </body>
 </html>
